--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,13 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-pydantic==2.5.2
+python-dotenv==1.0.0
+beanie==1.23.6
+motor==3.3.1
+pydantic==2.4.2
+email-validator==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-python-dotenv==1.0.0
-motor==3.3.2
-pymongo==4.6.1
-beanie==1.25.0 
+pymongo==4.6.0
+typing-extensions==4.8.0
+starlette==0.27.0 
