--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,4 +10,5 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 pymongo==4.6.0
 typing-extensions==4.8.0
-starlette==0.27.0 
+starlette==0.27.0
+groq==0.4.2 
